[package]
name = "justified_layout"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-simd", "--fast-math", "--gufa", "-O3", "--type-finalizing"]
