[package]
name = "justified_layout"
version = "0.3.0"
edition = "2021"
license = "AGPL-3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
rlsf = { version = "0.2.1" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "--enable-simd",
  "--fast-math",
  "--enable-bulk-memory",
  "--gufa",
  "-O3",
  "--type-finalizing",
]
