cargo-features = ["panic-immediate-abort"]

[package]
name = "justified_layout"
version = "0.4.3"
edition = "2021"
license = "AGPL-3"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
rlsf = { version = "0.2.1" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[[bin]]
name = "profile"
path = "src/profile.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "immediate-abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "--enable-simd",
  "--fast-math",
  "--enable-bulk-memory",
  "--gufa",
  "-O3",
  "--type-finalizing",
]
